some changes bd

--- a/core/templates/core/equipe.html
+++ b/core/templates/core/equipe.html
@@ -61,9 +61,9 @@
 					
 					<div class="card-body">
 
-						<h4 class="card-title"> Bruno Abreu</h4>
+						<h4 class="card-title">{{docentes_ta.0.nome}}</h4>
 						
-						<h6 class="subtitle text-muted">Coordenador</h6>
+						<h6 class="subtitle text-muted">{{docentes_ta.0.cargo}}</h6>
 						
 						<div class="mt-4">
 
@@ -184,9 +184,9 @@
 					
 					<div class="card-body">
 
-						<h4 class="card-title"> Gabriel Melo</h4>
+						<h4 class="card-title">{{alunos.0.nome}}</h4>
 						
-						<h6 class="subtitle text-muted">Presidente</h6>
+						<h6 class="subtitle text-muted">{{alunos.0.cargo}}</h6>
 						
 						<div class="mt-4">
 
@@ -212,9 +212,9 @@
 
 					<div class="card-body">
 
-						<h4 class="card-title"> Bruno Q.</h4>
+						<h4 class="card-title">{{alunos.1.nome}}</h4>
 						
-						<h6 class="subtitle text-muted">Diretor Projetos</h6>
+						<h6 class="subtitle text-muted">{{alunos.1.cargo}}</h6>
 						
 						<div class="mt-4">
 
