blog ok, code review todo

--- a/core/templates/core/common/header.html
+++ b/core/templates/core/common/header.html
@@ -14,7 +14,7 @@
 		<div class="collapse navbar-collapse" id="navbarSite">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item mr-2">
-					<a class="nav-link" href="blog.html">Blog</a>
+					<a class="nav-link" href="{% url 'blog' %}">Blog</a>
 				</li>
 
 				<li class="nav-item mr-2">
