--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -28,7 +28,7 @@
 				<div class="carousel-caption d-none d-lg-block text-dark">
 					
 					<h1>{{ destaques.0.titulo }}</h1>
-					<p class="lead"> {{ destaques.0.texto }} </p>
+					<p class="lead"> {{ destaques.0.descricao }} </p>
 
 				</div>
 
@@ -41,7 +41,7 @@
 				<div class="carousel-caption d-none d-lg-block text-dark">
 					
 					<h1>{{ destaques.1.titulo }}</h1>
-					<p class="lead"> {{ destaques.1.texto }}</p>
+					<p class="lead"> {{ destaques.1.descricao }}</p>
 
 				</div>
 
@@ -54,7 +54,7 @@
 				<div class="carousel-caption d-none d-lg-block text-dark">
 					
 					<h1>{{ destaques.2.titulo }}</h1>
-					<p class="lead">{{ destaques.2.texto }}</p>
+					<p class="lead">{{ destaques.2.descricao }}</p>
 
 				</div>
 
@@ -215,18 +215,17 @@
 					
 					<div class="mx-2 mt-4">
 					
-						<img class="card-img-top card_img" src="{% static 'img/icon_android.png' %}">
+						<img class="card-img-top card_img" src="{{servicos.0.servico.imagem.normal.url}}">
 					
 					</div>
 					
 					<div class="card-body">
 					
-						<h4 class="card-title"> Soluções mobile</h4>
+						<h4 class="card-title">{{servicos.0.servico.nome}}</h4>
 					
-						<h6 class="subtitle text-muted">Android & IOS</h6>
+						<h6 class="subtitle text-muted">{{servicos.0.servico.exemplos}}</h6>
 					
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad.</p>
+						<p class="card-text">{{servicos.0.servico.descricao}}</p>
 					
 						<a href="#" class="btn btn-lg btn-dark btn_custom mt-3 card-link" data-toggle="modal" data-target="#modalAndroid">
 							
@@ -454,7 +453,7 @@
 							
 							<li class=" nav-item" >
 								
-								<a class="nav-link active" id="navPortifolio_01" data-toggle="pill" href="#navPortifolio_item_01" > TomBanana</a>
+								<a class="nav-link active" id="navPortifolio_01" data-toggle="pill" href="#navPortifolio_item_01" >{{ portfolio.0.nome }}</a>
 								
 							</li>
 
@@ -477,8 +476,8 @@
 
 							<div class="tab-pane fade show active mt-5" id="navPortifolio_item_01" role="tabpanel">
 
-								<h1 class="display-5 text-center"> TomBanana </h1>
-								<h4 class="text-muted text-center"> Um app mobile que prevê a próxima colheita da banana </h4>
+								<h1 class="display-5 text-center">{{ portfolio.0.nome }}</h1>
+								<h4 class="text-muted text-center">{{ portfolio.0.exemplos }}</h4>
 
 								<div class="row mt-5">
 									
@@ -486,7 +485,7 @@
 										
 										<div class="embed-responsive embed-responsive-16by9">
 
-											<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"></iframe>
+											<iframe class="embed-responsive-item" src="{{ portfolio.0.video_url }}"></iframe>
 											
 
 
@@ -496,12 +495,7 @@
 
 									<div class="col-6">
 										
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+										<p>{{ portfolio.0.descricao }} </p>
 
 									</div>
 
@@ -673,7 +667,7 @@
 				
 				<div class="modal-header">
 					
-					<h5 class="modal-title"> Soluções mobile</h5>
+					<h5 class="modal-title">{{servicos.0.servico.nome}}</h5>
 
 					<button class="close" type="button" data-dismiss="modal">
 						
@@ -685,9 +679,7 @@
 
 				<div class="modal-body">
 					
-					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+					<p> {{servicos.0.texto}}</p>
 
 				</div>				
 
