--- a/core/templates/core/common/header.html
+++ b/core/templates/core/common/header.html
@@ -1,7 +1,6 @@
 {% load static %}
 
 <!--       ############## NAVBAR ############### 		-->
-
 <nav class="navbar navbar-expand-lg navbar-dark bg_gradient_roxo">
 
 	<a class="collapse navbar-collapse" id="navbarImg" href="{% url 'index' %}"><img  src="{% static 'img/completa_branca_preta.png' %}" height="40em"></a>
@@ -34,7 +33,7 @@
 			</ul>
 
 			<ul class="navbar-nav ml-auto">
-				<form class="form-inline">
+				<form class="form-inline"">
 					<input type="search" class="form-control mr-2" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Pesquisar...">
 					<button class="btn btn-light" type="Submit"> 	<img src="{% static 'img/lupa.svg' %}" height="15rem">
 					</button>
