--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -156,7 +156,7 @@
 
 		<div class="row justify-content-sm-center">
 			{% for s in servicos %}
-			<div class="col-sm-4 card-deck">
+			<div class="col-sm-6 card-deck col-md-4 col-10">
 				<div class="card ml-4 mr-4 mb-4 ">
 					<div class="mx-2 mt-4">
 						<img class="card-img-top card_img" src="{{s.servico.imagem.normal.url}}">
