--- a/core/templates/core/blog_post.html
+++ b/core/templates/core/blog_post.html
@@ -1,159 +1,88 @@
+{% extends 'core/common/base_blog.html' %}
+
 {% load static %}
 {% load widget_tweaks %}
-<!DOCTYPE html>
-<html>
-{% include 'core/common/head_blog.html' %}
-<body>
 
-<!--       ############## NAVBAR ############### 		-->
-{% include 'core/common/header_blog.html' %}
+{% block noticias %}
+    <!-- Title -->
+    <h1 class="mt-4">{{ postagem.titulo }}</h1>
 
-<!--       ############## INICIO CONTEUDO ############### 		-->
-<!-- <img class="img-fluid" src="img/bg_tools.png"> -->
-	<div class="container">
+    <!-- Author -->
+    <p class="lead">
+        por
+        <a href="#">{{ postagem.autor }}</a>
+    </p>
 
-        <div class="row">
+    <hr>
 
-            <!-- Post Content Column -->
-            <div class="col-md-8 order-1">
+    <!-- Date/Time -->
+    <p>{{ postagem.data_publicacao }}</p>
 
-                <!-- Title -->
-                <h1 class="mt-4">{{ postagem.titulo }}</h1>
+    <hr>
 
-                <!-- Author -->
-                <p class="lead">
-                    por
-                    <a href="#">{{ postagem.autor }}</a>
-                </p>
+    <!-- Preview Image -->
+    <img class="img-fluid rounded" src="{{ postagem.imagem.normal.url }}" alt="">
 
-                <hr>
+    <!-- Post Content -->
+    <p class="lead">{{ postagem.texto }}</p>
+    <hr>
 
-                <!-- Date/Time -->
-                <p>{{ postagem.data_publicacao }}</p>
-
-                <hr>
-
-                <!-- Preview Image -->
-                <img class="img-fluid rounded" src="{{ postagem.imagem.normal.url }}" alt="">
-
-                <!-- Post Content -->
-                <p class="lead">{{ postagem.texto }}</p>
-                <hr>
-
-                <p>&nbsp;</p>
-                <h4>Sobre o autor</h4>
-                <div class="media rounded mt-4 mr-4">
-                    <div class="media-left">
-                        <img class="d-flex mr-3 rounded media-object" src="http://placehold.it/100x100" alt="">
-                    </div>
-
-                    <div class="media-body">
-                        <h5 class="media-heading">{{postagem.autor}}</h5>
-                        <p>{{postagem.autor.sobre}}</p>
-                    </div>
-                </div>
-
-                <!-- Comentarios -->
-                <div class="container mt-5">
-                    {% if qt_comentarios == 1 %}
-                    <h5>{{ qt_comentarios }} comentário</h5>
-                    {% else %}
-                    <h5>{{ qt_comentarios }} comentários</h5>
-                    {% endif %}                   
-                
-                    <!-- Single Comment -->
-                    {% for comentario in comentarios %}
-                    <div class="media mb-4 mt-4">
-                        <div class="media-left">
-                            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/60x60" alt=""> 
-                        </div>
-
-                        <div class="media-body">
-                            <h5 class="media-heading">{{ comentario.nome }}</h5>
-                            <small>{{ comentario.data_comentario }}</small>
-                            <p>{{ comentario.comentario }}</p>
-                        </div>
-                    </div>
-                    <hr>
-                    {% endfor %}
-                </div>
-
-                <!-- Comments Form -->
-                <div class="card my-4">
-                    <h5 class="card-header bg_roxo text-light">Deixe um comentário:</h5>
-                    <div class="card-body">
-                        <form autocomplete="off" method="post">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                {% render_field form.nome class='form-control' placeholder=form.nome.label %}
-                            </div>
-                            <div class="form-group">
-                                {% render_field form.email class='form-control' placeholder=form.email.label %}
-                            </div>
-                            <div class="form-group">
-                                {% render_field form.comentario class='form-control' placeholder=form.comentario.label rows="3" %}
-                            </div>
-                            <button type="submit" class="btn btn-dark box_generic">Enviar</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Sidebar Widgets Column -->
-            <div class="col-md-4 order-md-2">
-                <!-- Categories Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header bg_roxo text-light">Categorias</h5>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                        <a href="#">Eletrônica</a>
-                                    </li>
-                                    <li class="mt-2">
-                                        <a href="#">Web Design</a>
-                                    </li>
-                                    <li class="mt-2">
-                                        <a href="#">Programação</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                        <a href="#">Design</a>
-                                     </li>
-                                    <li class="mt-2">
-                                        <a href="#">Inteligência Computacional</a>
-                                    </li>
-                                    <li class="mt-2">
-                                        <a href="#">Softwares</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Side Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header bg_roxo text-light">Cursos</h5>
-                    <div class="card-body">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    </div>
-                </div>
-            </div>
-
+    <p>&nbsp;</p>
+    <h4>Sobre o autor</h4>
+    <div class="media rounded mt-4 mr-4">
+        <div class="media-left">
+            <img class="d-flex mr-3 rounded media-object" src="http://placehold.it/100x100" alt="">
         </div>
-        <!-- /.row -->
+
+        <div class="media-body">
+            <h5 class="media-heading">{{postagem.autor}}</h5>
+            <p>{{postagem.autor.sobre}}</p>
+        </div>
     </div>
-    <!-- /.container -->
 
-<!-- Footer -->
-{% include 'core/common/footer_blog.html' %}
+    <!-- Comentarios -->
+    <div class="container mt-5">
+        {% if qt_comentarios == 1 %}
+        <h5>{{ qt_comentarios }} comentário</h5>
+        {% else %}
+        <h5>{{ qt_comentarios }} comentários</h5>
+        {% endif %}                   
+    
+        <!-- Single Comment -->
+        {% for comentario in comentarios %}
+        <div class="media mb-4 mt-4">
+            <div class="media-left">
+                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/60x60" alt=""> 
+            </div>
 
-</body>
-</html>
+            <div class="media-body">
+                <h5 class="media-heading">{{ comentario.nome }}</h5>
+                <small>{{ comentario.data_comentario }}</small>
+                <p>{{ comentario.comentario }}</p>
+            </div>
+        </div>
+        <hr>
+        {% endfor %}
+    </div>
+
+    <!-- Comments Form -->
+    <div class="card my-4">
+        <h5 class="card-header bg_roxo text-light">Deixe um comentário:</h5>
+        <div class="card-body">
+            <form autocomplete="off" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    {% render_field form.nome class='form-control' placeholder=form.nome.label %}
+                </div>
+                <div class="form-group">
+                    {% render_field form.email class='form-control' placeholder=form.email.label %}
+                </div>
+                <div class="form-group">
+                    {% render_field form.comentario class='form-control' placeholder=form.comentario.label rows="3" %}
+                </div>
+                <button type="submit" class="btn btn-dark box_generic">Enviar</button>
+            </form>
+        </div>
+    </div>
+{% endblock %}
+
