--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -153,32 +153,33 @@
 			
 			</div>-->
 		</div>		
+		<div class="container-fluid">
+			<div class="row justify-content-sm-center">
+				{% for s in servicos %}
+				<div class="col-sm-6 card-deck col-md-4 col-10">
+					<div class="card ml-4 mr-4 mb-4 ">
+						<div class="mx-2 mt-4">
+							<img class="card-img-top card_img" src="{{s.servico.imagem.normal.url}}">
+						</div>
+						
+						<div class="card-body">
+							<h4 class="card-title">{{s.servico.nome}}</h4>
+							<h6 class="subtitle text-muted">{{s.servico.exemplos}}</h6>
+							<p class="card-text">{{s.servico.descricao}}</p>
+							<a href="#" class="btn btn-lg btn-dark btn_custom mt-3 card-link" data-toggle="modal" data-target="#{{ s.modal }}">
+								<i class="fa fa-plus-circle mx-2" aria-hidden="true"></i>
+								Saiba Mais
+							</a>
+							<!--<button href="#" class="btn btn-lg bg_roxo btn_hover box_generic text-light card-link" data-toggle="modal" data-target="#modalAndroid">Saiba mais</button>-->
+						</div>
 
-		<div class="row justify-content-sm-center">
-			{% for s in servicos %}
-			<div class="col-sm-6 card-deck col-md-4 col-10">
-				<div class="card ml-4 mr-4 mb-4 ">
-					<div class="mx-2 mt-4">
-						<img class="card-img-top card_img" src="{{s.servico.imagem.normal.url}}">
-					</div>
-					
-					<div class="card-body">
-						<h4 class="card-title">{{s.servico.nome}}</h4>
-						<h6 class="subtitle text-muted">{{s.servico.exemplos}}</h6>
-						<p class="card-text">{{s.servico.descricao}}</p>
-						<a href="#" class="btn btn-lg btn-dark btn_custom mt-3 card-link" data-toggle="modal" data-target="#{{ s.modal }}">
-							<i class="fa fa-plus-circle mx-2" aria-hidden="true"></i>
-							Saiba Mais
-						</a>
-						<!--<button href="#" class="btn btn-lg bg_roxo btn_hover box_generic text-light card-link" data-toggle="modal" data-target="#modalAndroid">Saiba mais</button>-->
-					</div>
-
-					<div class="card-footer bg-dark">
-						<h6 class="text-light mt-1"><i class="fa fa-cog" aria-hidden="true"></i> Cursos em desenvolvimento <i class="fa fa-cog" aria-hidden="true"></i> </h6>
+						<div class="card-footer bg-dark">
+							<h6 class="text-light mt-1"><i class="fa fa-cog" aria-hidden="true"></i> Cursos em desenvolvimento <i class="fa fa-cog" aria-hidden="true"></i> </h6>
+						</div>
 					</div>
 				</div>
+				{% endfor %}
 			</div>
-			{% endfor %}
 		</div>
 	</div>
 
@@ -248,45 +249,47 @@
 
 	<!-- ###################### FOOTER ######################## -->
 	<div class="bg-dark text-light justify-content-center text-center">
-		<div class="row">
-			<div class="my-5 col-sm-12 text-center">
-				<h2 class=" display-4 "> Onde estamos?</h2>
-				<p class="lead"> Endereço, contato e redes!</p>
-			</div>
-		</div>
-
-		<div class="row justify-content-center">
-			<div class="col-sm-12 col-md-6 col-lg-6 text-light ">
-				<div class=" mx-auto mb-5 rounded" id="googleMap" style="width:80%;height:400px;"></div>
+		<div class="container">
+			<div class="row">
+				<div class="my-5 col-sm-12 text-center">
+					<h2 class=" display-4 "> Onde estamos?</h2>
+					<p class="lead"> Endereço, contato e redes!</p>
+				</div>
 			</div>
 
-			<div class="row col-6  mt-lg-5 mt-md-3 mt-sm-0 ">
-		
-				<div class="col-4 col-sm-4">
-					<a class="text-light" href="http://facebook.com/EMakersUFLA">
-						<i class="fa fa-facebook-square fa-5x mr-3 mr-sm-3 mr-md-3 mr-lg-3" aria-hidden="true"></i>
-					</a>
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-6 col-lg-6 text-light ">
+					<div class=" mx-auto mb-5 rounded" id="googleMap" style="width:80%;height:400px;"></div>
 				</div>
 
-				<div class=" col-4 col-sm-4">
-					<a class="text-light" href="http://facebook.com/EMakersUFLA">
-						<i class="fa fa-instagram fa-5x mr-4" aria-hidden="true"></i>
-					</a>
-				</div>
+				<div class="row col-6  mt-lg-5 mt-md-3 mt-sm-0 ">
+			
+					<div class="col-4 col-sm-4">
+						<a class="text-light" href="http://facebook.com/EMakersUFLA">
+							<i class="fa fa-facebook-square fa-5x mr-3 mr-sm-3 mr-md-3 mr-lg-3" aria-hidden="true"></i>
+						</a>
+					</div>
 
-				<div class="col-4 col-sm-4">
-					<a class="text-light" href="http://facebook.com/EMakersUFLA">
-						<i class="fa fa-youtube-square fa-5x mr-5 mb-lg-5 mb-md-3 mb-sm-5" aria-hidden="true"></i>
-					</a>
-				</div>
+					<div class=" col-4 col-sm-4">
+						<a class="text-light" href="http://facebook.com/EMakersUFLA">
+							<i class="fa fa-instagram fa-5x mr-4" aria-hidden="true"></i>
+						</a>
+					</div>
 
-				<div class="col-12 col-sm-12 ml-3">
-					<p class="ml-5 ml-lg-0 ml-md-0 ml-sm-0 mr-0 mr-sm-5 mr-md-5 mr-lg-5 mt-sm-0 mt-md-0 mt-lg-0 mt-4 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div class="col-4 col-sm-4">
+						<a class="text-light" href="http://facebook.com/EMakersUFLA">
+							<i class="fa fa-youtube-square fa-5x mr-5 mb-lg-5 mb-md-3 mb-sm-5" aria-hidden="true"></i>
+						</a>
+					</div>
+
+					<div class="col-12 col-sm-12 ml-3">
+						<p class="ml-5 ml-lg-0 ml-md-0 ml-sm-0 mr-0 mr-sm-5 mr-md-5 mr-lg-5 mt-sm-0 mt-md-0 mt-lg-0 mt-4 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
 				</div>
 			</div>
 		</div>
